Switching to OpenAI, InMemoryEmbeddingStore and plain java InMemoryDatabase to remove the need for DataStax/Astra/Cassandra